kubernetes/06_apps/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: alysio-dm
  name: wordpress
  labels:
    component: wordpress
spec:
  selector:
    matchLabels:
      component: wordpress
  template:
    metadata:
      labels:
        component: wordpress
    spec:
      restartPolicy: Always
      containers:
      - image: bitnami/wordpress
        name: wordpress
        ports:
        - containerPort: 8080
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
        - name: php-config
          mountPath: /usr/local/etc/php/conf.d/uploads.ini
          subPath: uploads.ini
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: alysio-dm-wordpress-pvc
      - configMap:
          defaultMode: 420
          name: wp-php-config
        name: php-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: alysio-dm
  name: wordpress
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    component: wordpress
