kubernetes/06_apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  namespace: alysio-dm
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "alysio-dm-letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "360"
spec:
  tls:
    - hosts:
      - "alysiodemattos.com"
      secretName: "alysio-dm-tls"
  rules:
    - host: alysiodemattos.com
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: wordpress
                port:
                  number: 80
